--- a/SPR-14558/pom.xml
+++ b/SPR-14558/pom.xml
@@ -9,7 +9,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.6</java.version>
+		<java.version>1.8</java.version>
 		<spring.version>4.1.9.RELEASE</spring.version>
 		<slf4j.version>1.7.21</slf4j.version>
 		<tomcat.version>8.0.36</tomcat.version>
@@ -173,6 +173,13 @@
 
 	<build>
 		<plugins>
+			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-war-plugin</artifactId>
+			  <configuration>
+			  	<failOnMissingWebXml>false</failOnMissingWebXml>
+			  </configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
